# SentinelDeck

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  publish.yml  security.yml
assets/: demo.tape
src/sentineldeck/: __init__.py  __main__.py  alerts.py  cli.py  dashboard.py  diff.py  models.py  monitor.py  remediation.py  scanner.py  suppressions.py  tui.py
src/sentineldeck/data/: kev_cves.json
src/sentineldeck/reporters/: __init__.py  badge.py  diff_report.py  html_report.py  json_report.py
src/sentineldeck/risk/: __init__.py  scoring.py
src/sentineldeck/scanners/: __init__.py  archive.py  asn.py  blocklists.py  cloud_assets.py  dns_hygiene.py  dns_lookup.py  domain.py  domain_intel.py  email_security.py  fingerprint.py  http_headers.py  internetdb.py  ip_intel.py  ip_rdap.py  kev.py  ports.py  reputation.py  reverse_ip.py  saas_stack.py  subdomains.py  takeover.py  target.py  tls.py  tls_config.py  typosquat.py  web_content.py
src/sentineldeck/webui/: app.js  index.html  style.css
tests/: test_alerts.py  test_archive.py  test_asn.py  test_badge.py  test_blocklists.py  test_cli.py  test_cli_diff.py  test_cli_monitor.py  test_cli_report.py  test_cli_scan.py  test_cloud_assets.py  test_dashboard.py  test_dashboard_render.py  test_diff.py  test_dns_hygiene.py  test_dns_lookup.py  test_domain.py  test_domain_intel.py  test_email_security.py  test_fingerprint.py  test_html_report.py  test_http_headers.py  test_internetdb.py  test_ip_intel.py  test_ip_rdap.py  test_json_report.py  test_kev.py  test_monitor.py  test_ports.py  test_remediation.py  test_reputation.py  test_reverse_ip.py  test_saas_stack.py  test_scan_ip.py  test_scanner.py  test_scoring.py  test_subdomains.py  test_suppressions.py  test_takeover.py  test_target.py  (+5 more)
tests/fixtures/: dashboard_report.json
tests/webui/: render_check.js
