[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentineldeck"
version = "0.1.0"
description = "Passive attack-surface visibility and client-ready security reports for small businesses."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "sanmaxdev"}]
keywords = ["security", "attack-surface", "osint", "headers", "ssl", "sme"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
]
dependencies = ["dnspython>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
sentineldeck = "sentineldeck.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Report renderers are large inline templates with long markup/CSS lines.
"src/sentineldeck/reporters/html_report.py" = ["E501"]
"src/sentineldeck/reporters/badge.py" = ["E501"]
