[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentineldeck"
version = "0.1.0"
description = "Passive attack-surface visibility and client-ready security reports for small businesses."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "sanmaxdev"}]
keywords = ["security", "attack-surface", "osint", "headers", "ssl", "sme"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Typing :: Typed",
]
dependencies = ["dnspython>=2.0", "cryptography>=41.0"]

[project.urls]
Homepage = "https://github.com/sanmaxdev/SentinelDeck"
Repository = "https://github.com/sanmaxdev/SentinelDeck"
Issues = "https://github.com/sanmaxdev/SentinelDeck/issues"
Changelog = "https://github.com/sanmaxdev/SentinelDeck/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
sentineldeck = "sentineldeck.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sentineldeck = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.bandit]
# Patterns inherent to a passive network scanner, reviewed as safe:
#   B404/B603 - the dig/host DNS fallback runs a fixed argv with no shell
#   B310      - urlopen targets are https/http URLs we construct from a domain
#   B112      - retry loops continue on a failed attempt
skips = ["B404", "B603", "B310", "B112"]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Report renderers and the remediation snippets are inline templates with long
# markup, CSS, and config lines.
"src/sentineldeck/reporters/html_report.py" = ["E501"]
"src/sentineldeck/reporters/badge.py" = ["E501"]
"src/sentineldeck/reporters/diff_report.py" = ["E501"]
"src/sentineldeck/remediation.py" = ["E501"]
